# gdbus-tutorial

./: README.md  configure-alarm.py  configure.ac  listen-alarm.js
data/: Makefile.am  es.aleksander.Alarm.service.in
src/: Makefile.am  client-alarm.c  es.aleksander.Alarm.xml  service-alarm.c
